--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
+  },
+  "scripts": {
+    "dev": "nodemon src/server.js"
   }
 }
