--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Jared Hutchinson",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2"
   },
   "devDependencies": {
